traversal.snake.Snake.scala.error
Compilation error:
Snake:19: error: ';' expected but 'return' found.
  } return false
    ^